--- a/src/components/atoms/PasswordInput/PasswordStrengthMeter.module.scss
+++ b/src/components/atoms/PasswordInput/PasswordStrengthMeter.module.scss
@@ -4,7 +4,7 @@
   margin-top: var(--spacing-sm);
   padding: var(--spacing-sm);
   background-color: var(--color-gray-0);
-  border: 1px solid var(--color-gray-3);
+  border: var(--border-width-thin) solid var(--color-gray-3);
   border-radius: var(--radius-md);
   font-family: var(--font-family);
   font-size: var(--font-size-sm);
