--- a/src/components/atoms/PillInput/PillInput.module.scss
+++ b/src/components/atoms/PillInput/PillInput.module.scss
@@ -10,10 +10,10 @@
   align-items: center;
   flex-wrap: wrap;
   gap: var(--spacing-xs);
-  min-height: 40px;
+  min-height: calc(var(--line-height-md) * 2.5);
   padding: var(--spacing-sm);
   background-color: var(--color-white);
-  border: 1px solid var(--color-gray-3);
+  border: var(--border-width-thin) solid var(--color-gray-3);
   border-radius: var(--radius-md);
   font-family: var(--font-family);
   font-size: var(--font-size-md);
@@ -23,7 +23,7 @@
 
   &:focus-within {
     border-color: var(--color-blue-6);
-    box-shadow: 0 0 0 1px var(--color-blue-6);
+    box-shadow: 0 0 0 var(--border-width-thin) var(--color-blue-6);
     transition: none;
   }
 
@@ -48,7 +48,7 @@
 
 .inputWrapper {
   flex: 1;
-  min-width: 120px;
+  min-width: calc(var(--spacing-xl) * 3.75);
 }
 
 .input {
@@ -75,7 +75,7 @@
 // Size variants
 .size-sm {
   .inputContainer {
-    min-height: 32px;
+    min-height: calc(var(--line-height-sm) * 1.6);
     padding: var(--spacing-xs);
     font-size: var(--font-size-sm);
     line-height: var(--line-height-sm);
@@ -84,7 +84,7 @@
 
 .size-md {
   .inputContainer {
-    min-height: 40px;
+    min-height: calc(var(--line-height-md) * 2.5);
     padding: var(--spacing-sm);
     font-size: var(--font-size-md);
     line-height: var(--line-height-md);
@@ -93,7 +93,7 @@
 
 .size-lg {
   .inputContainer {
-    min-height: 48px;
+    min-height: calc(var(--line-height-lg) * 1.8);
     padding: var(--spacing-md);
     font-size: var(--font-size-lg);
     line-height: var(--line-height-lg);
@@ -102,7 +102,7 @@
 
 .size-xl {
   .inputContainer {
-    min-height: 56px;
+    min-height: calc(var(--line-height-xl) * 1.9);
     padding: var(--spacing-lg);
     font-size: var(--font-size-xl);
     line-height: var(--line-height-xl);
@@ -116,7 +116,7 @@
 
     &:focus-within {
       border-color: var(--color-red-6);
-      box-shadow: 0 0 0 1px var(--color-red-6);
+      box-shadow: 0 0 0 var(--border-width-thin) var(--color-red-6);
     }
   }
 }
