--- a/src/components/atoms/Textarea/Textarea.module.scss
+++ b/src/components/atoms/Textarea/Textarea.module.scss
@@ -25,7 +25,7 @@
 
 .textarea {
   width: 100%;
-  border: 1px solid var(--color-input-border);
+  border: var(--border-width-thin) solid var(--color-input-border);
   border-radius: var(--radius-md);
   background-color: var(--color-input-background);
   color: var(--color-input-text);
@@ -38,7 +38,7 @@
   outline: none;
   box-sizing: border-box;
   overflow: auto;
-  min-height: 100px;
+  min-height: calc(var(--line-height-md) * 4);
 
   // Remove default browser styles
   &::-webkit-scrollbar {
@@ -68,7 +68,7 @@
   // Focus styles
   &:focus {
     border-color: var(--color-input-border-focus);
-    box-shadow: 0 0 0 2px var(--color-input-border-focus);
+    box-shadow: 0 0 0 var(--border-width-normal) var(--color-input-border-focus);
     transition: none;
   }
 
