--- a/src/components/atoms/Calendar/Calendar.module.scss
+++ b/src/components/atoms/Calendar/Calendar.module.scss
@@ -9,8 +9,8 @@
   padding: var(--spacing-lg);
   box-shadow: var(--shadow-normal);
   font-family: var(--font-family);
-  min-width: 280px;
-  max-width: 400px;
+  min-width: var(--widget-min-width);
+  max-width: var(--widget-max-width);
 
   &.disabled {
     opacity: var(--opacity-50);
@@ -31,8 +31,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 32px;
-  height: 32px;
+  width: var(--control-size-sm);
+  height: var(--control-size-sm);
   border: none;
   background-color: var(--color-gray-0);
   color: var(--color-gray-7);
