--- a/src/components/atoms/Modal/Modal.module.scss
+++ b/src/components/atoms/Modal/Modal.module.scss
@@ -7,7 +7,7 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: var(--color-backdrop);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -142,7 +142,7 @@
 }
 
 // Responsive design
-@media (max-width: 768px) {
+@media (max-width: var(--breakpoint-tablet)) {
   .backdrop {
     padding: var(--spacing-md);
   }
@@ -180,7 +180,7 @@
   }
 }
 
-@media (max-width: 480px) {
+@media (max-width: var(--breakpoint-mobile)) {
   .backdrop {
     padding: var(--spacing-sm);
   }
